PLF-3884 :Implement PROFILE BUTTON in top navigation Portlet

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
@@ -478,7 +478,10 @@ box-shadow: 1px 1px 2px #dddddd;
 .UIUserToolBarPortlet .NavigationAvatar img {
 width: 40px;
 }
-
+.UIUserToolBarPortlet .TBIcon img {
+width:25px;
+margin-bottom: 6px;
+}
 .UIUserToolBarPortlet .UINavigationComposer {
 margin: 0px;
 }
