--- a/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
@@ -139,7 +139,8 @@ opacity: 1;
 height: 24px;	
 line-height: 24px;
 text-align: left;
-    width: auto;
+width: auto;
+height:auto;
 }
 
 *+html .UIToolbarContainer .MenuItem {
@@ -402,7 +403,7 @@ padding: 5px 10px;
 }
 
 .UIUserToolBarPortlet .MenuItemContainer {
-width: 340px;
+width: 145px;
 }
 
 .UIUserToolBarPortlet .MenuItemContainer li ul {
@@ -411,7 +412,6 @@ border-bottom: 1px solid #dbdbdb;
 
 .UIUserToolBarPortlet .MenuItemContainer li ul li.MenuItem {
 float: left;
-width: 43%;
 }
 
 .UIUserToolBarPortlet .MenuItemContainer .MenuItem {
@@ -419,7 +419,6 @@ height: auto;
 line-height: normal;
 margin: 0;
 padding: 5px 10px;
-width: 80%;
 line-height: 18px;
 }
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
