PLF-3895: Implement Company Navigation Portlet

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
@@ -23,6 +23,7 @@
 @import url(UICLVFolderMode/Stylesheet.css);
 @import url(UIBreadcrumb/Stylesheet.css);
 @import url(userNavigationPortlet/Stylesheet.css);
+@import url(UICompanyNavigationPortlet/UICompanyNavigationPortlet.css);
 
 div, table, th, tr, td, img, form {
 	padding: 0px; margin: 0px;
