PLF-3900: [Left Navigation][Groups Navigation Portlet] Display sub-navigations in the navigation tree.

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
@@ -24,6 +24,7 @@
 @import url(UIBreadcrumb/Stylesheet.css);
 @import url(userNavigationPortlet/Stylesheet.css);
 @import url(UICompanyNavigationPortlet/UICompanyNavigationPortlet.css);
+@import url(UIGroupsNavigation/DefaultStylesheet.css);
 
 div, table, th, tr, td, img, form {
     padding: 0px; margin: 0px;
