PLF-3899 :[Left Navigation] Add "Space" portlet in Left Navigation Bar

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
@@ -282,7 +282,7 @@ a {
 
 
 .ListNavigationSpaces {
-    height: 230px;
+    max-height: 230px;
     overflow-y: auto;
 }
 .UISpaceNavigationPortletTab NormalToolbarTab{
