PLF-3925 : [Common][SharedLayout] Adapt the sharedlyout to follow the new page structure

--- a/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIPortalApplicationSkin.css
@@ -279,11 +279,12 @@ a {
 .UISpaceNavigationPortletSelectedItem {
     background-color: #EBEBEB;
 }
-
-
 .ListNavigationSpaces {
     max-height: 230px;
     overflow-y: auto;
 }
 .UISpaceNavigationPortletTab NormalToolbarTab{
+}
+.LeftNavigationTDContainer{
+    width: 250px;
 }
