--- a/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
@@ -1,110 +1,92 @@
 /**
- * Copyright (C) 2009 eXo Platform SAS.
- * 
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- * 
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- * 
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
-
-/**
- * Cated by The eXo Platform SAS
- * Modifile : Vu Duy Tu
- *           duytucntt@gmail.com
- * January 10, 2007
- * version: $Id$
- */
-
-
-.UIWindow .UISitemapPortlet {
-	border: none;
-	margin: 0px;
+* Copyright ( C ) 2012 eXo Platform SAS.
+*
+* This is free software; you can redistribute it and/or modify it
+* under the terms of the GNU Lesser General Public License as
+* published by the Free Software Foundation; either version 2.1 of
+* the License, or (at your option) any later version.
+*
+* This software is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+* Lesser General Public License for more details.
+*
+* You should have received a copy of the GNU Lesser General Public
+* License along with this software; if not, write to the Free
+* Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+* 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+*/
+.UIGroupsNavigation .UIGroupsNavigationTitle{
+    background-color: #ececec;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
-.UISitemapPortlet {
-}
 
-.UISitemap {
+.UIGroupsNavigation {
 	background: #fff  no-repeat 95% 90%; /* orientation=lt */
 	background: #fff no-repeat 5% 90%; /* orientation=rt */
 	padding: 10px 30px;
 	color: #4e4e4e;
 }
 
-.UISitemap a {
+.UIGroupsNavigation a {
 	color: #4e4e4e;
 }
 
-.UISitemap .CollapseAll {
-	background: url('DefaultSkin/background/CollapseAllIcon.gif') no-repeat left center; /* orientation=lt */
-	background: url('DefaultSkin/background/CollapseAllIcon-rt.gif') no-repeat right center; /* orientation=rt */
-	padding: 0px 20px;
-	cursor: pointer;
-}
 
-.UISitemap .SitemapContent {
-	background: url('DefaultSkin/background/RootTree.gif') no-repeat left top; /* orientation=lt */
-	background: url('DefaultSkin/background/RootTree-rt.gif') no-repeat right top; /* orientation=rt */
+.UIGroupsNavigation .GroupListContent {
+
 	padding-top: 8px; 
 	margin: 20px 0px;
 }
 
-.UISitemap .SitemapContent .UISiteTree a {
+.UIGroupsNavigation .GroupListContent .UIGroupTree a {
 	font-weight: bold;
 	display: block;
-	float: left; /* orientation=lt */
-	float: right; /* orientation=rt */
+	float: left;
+    margin: 5px 0px 5px 0px;/* orientation=lt */
+
+}
+.UIGroupsNavigation .GroupListContent .UIGroupTree img {
+
+    margin: 5px 0px 5px 0px;/* orientation=lt */
+
 }
 
-.UISitemap .SitemapContent .UISiteTree a:hover {
+.UIGroupsNavigation .GroupListContent .UIGroupTree a:hover {
 	color: #058bb6;
 }
 
-.UISitemap .UISiteTree .Node {
+.UIGroupsNavigation .UIGroupTree .Node {
 	line-height: 24px;
-	background: url('DefaultSkin/background/Dotted.gif') repeat-y left top; /* orientation=lt */
-	background: url('DefaultSkin/background/Dotted.gif') repeat-y right top; /* orientation=rt */
+
+
 }
 
-.UISitemap .UISiteTree .LastNode {
-	line-height: 24px;
-	background: url('DefaultSkin/background/LastNode.gif') no-repeat left top; /* orientation=lt */
-	background: url('DefaultSkin/background/LastNode.gif') no-repeat right top; /* orientation=rt */
-}
 
-.UISitemap .CollapseIcon {
-	background: url('DefaultSkin/background/CollapseIcon.gif') no-repeat left center; /* orientation=lt */
-	background: url('DefaultSkin/background/CollapseIcon-rt.gif') no-repeat right center; /* orientation=rt */
-	padding: 0px 5px 0px 30px; /* orientation=lt */
+.UIGroupsNavigation .CollapseIcon {
+
+	/*padding: 0px 5px 0px 30px; *//* orientation=lt */
 	padding: 0px 30px 0px 5px; /* orientation=rt */
-	cursor: pointer;
 }
 
-.UISitemap .ExpandIcon {
-	background: url('DefaultSkin/background/ExpandIcon.gif') no-repeat left center; /* orientation=lt */
-	background: url('DefaultSkin/background/ExpandIcon-rt.gif') no-repeat right center; /* orientation=rt */
-	padding: 0px 5px 0px 30px; /* orientation=lt */
+.UIGroupsNavigation .ExpandIcon {
+
+	/*padding: 0px 5px 0px 30px;*/ /* orientation=lt */
 	padding: 0px 30px 0px 5px; /* orientation=rt */
-	cursor: pointer;
+}
+.UIGroupsNavigation .NodeContent {
+    padding: 0px 5px 0px 30px; /* orientation=lt */
+    padding: 0px 30px 0px 5px;
 }
 
-.UISitemap .NullItem {
-	background: url('DefaultSkin/background/NullItem.gif') no-repeat left center; /* orientation=lt */
-	background: url('DefaultSkin/background/NullItem-rt.gif') no-repeat right center; /* orientation=rt */
+.UIGroupsNavigation .NullItem {
+
 	padding: 0px 30px;
 }
 
-.UISitemap .DefaultPageIcon {
+.UIGroupsNavigation .DefaultPageIcon {
 	padding: 4px 0px 4px 20px; /* orientation=lt */
 	padding: 4px 20px 4px 0px; /* orientation=rt */
 	background-position: left center; /* orientation=lt */
@@ -112,7 +94,13 @@
 	width: auto;
 }
 
-.UISitemap .ChildrenContainer {
+.UIGroupsNavigation .GroupName{
+   background-color: #d1d1d1;
+    padding-top: 8px;
+}
+
+
+.UIGroupsNavigation .ChildrenContainer {
 	padding-left: 31px; /* orientation=lt */
 	padding-right: 31px; /* orientation=rt */
 	float: none;
