--- a/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
@@ -16,12 +16,6 @@
 * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 */
-.UIGroupsNavigation .UIGroupsNavigationTitle{
-    background-color: #ececec;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
 
 .UIGroupsNavigation {
 	background: #fff  no-repeat 95% 90%; /* orientation=lt */
@@ -34,10 +28,7 @@
 	color: #4e4e4e;
 }
 
-
 .UIGroupsNavigation .GroupListContent {
-
-	padding-top: 8px; 
 	margin: 20px 0px;
 }
 
@@ -45,13 +36,9 @@
 	font-weight: bold;
 	display: block;
 	float: left;
-    margin: 5px 0px 5px 0px;/* orientation=lt */
-
 }
 .UIGroupsNavigation .GroupListContent .UIGroupTree img {
-
     margin: 5px 0px 5px 0px;/* orientation=lt */
-
 }
 
 .UIGroupsNavigation .GroupListContent .UIGroupTree a:hover {
@@ -60,21 +47,18 @@
 
 .UIGroupsNavigation .UIGroupTree .Node {
 	line-height: 24px;
-
-
 }
 
-
 .UIGroupsNavigation .CollapseIcon {
-
-	/*padding: 0px 5px 0px 30px; *//* orientation=lt */
-	padding: 0px 30px 0px 5px; /* orientation=rt */
+	padding: 0px 30px 0px 3px; /* orientation=rt */
+    padding-left: 20px;
+    padding-top: 5px;
 }
 
 .UIGroupsNavigation .ExpandIcon {
-
-	/*padding: 0px 5px 0px 30px;*/ /* orientation=lt */
-	padding: 0px 30px 0px 5px; /* orientation=rt */
+	padding: 0px 30px 0px 3px; /* orientation=rt */
+    padding-left: 20px;
+    padding-top: 5px;
 }
 .UIGroupsNavigation .NodeContent {
     padding: 0px 5px 0px 30px; /* orientation=lt */
@@ -82,7 +66,6 @@
 }
 
 .UIGroupsNavigation .NullItem {
-
 	padding: 0px 30px;
 }
 
@@ -97,11 +80,12 @@
 .UIGroupsNavigation .GroupName{
    background-color: #d1d1d1;
     padding-top: 8px;
+    padding-bottom: 8px;
+    text-align: center;
+    font-size: 14px;
 }
 
-
 .UIGroupsNavigation .ChildrenContainer {
-	padding-left: 31px; /* orientation=lt */
-	padding-right: 31px; /* orientation=rt */
+	padding-left: 11px; /* orientation=lt */
 	float: none;
 }
