--- a/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
@@ -49,13 +49,13 @@
 	line-height: 24px;
 }
 
-.UIGroupsNavigation .CollapseIcon {
+.UIGroupsNavigation .GroupsNavigationCollapseIcon {
 	padding: 0px 30px 0px 3px; /* orientation=rt */
     padding-left: 20px;
     padding-top: 5px;
 }
 
-.UIGroupsNavigation .ExpandIcon {
+.UIGroupsNavigation .GroupsNavigationExpandIcon {
 	padding: 0px 30px 0px 3px; /* orientation=rt */
     padding-left: 20px;
     padding-top: 5px;
