--- a/extension/resources/src/main/webapp/skin/platformSkin/UICompanyNavigationPortlet/UICompanyNavigationPortlet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UICompanyNavigationPortlet/UICompanyNavigationPortlet.css
@@ -28,3 +28,11 @@
     margin: 2px 5px 6px 10px;
     background-color: #959595;
 }
+
+.NodeIcon {
+    padding: 4px 0px 4px 20px; /* orientation=lt */
+    padding: 4px 20px 4px 0px; /* orientation=rt */
+    background-position: left center; /* orientation=lt */
+    background-position: right center; /* orientation=rt */
+    width: auto;
+}
