--- a/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIGroupsNavigation/DefaultStylesheet.css
@@ -69,12 +69,19 @@
 	padding: 0px 30px;
 }
 
-.UIGroupsNavigation .DefaultPageIcon {
-	padding: 4px 0px 4px 20px; /* orientation=lt */
-	padding: 4px 20px 4px 0px; /* orientation=rt */
-	background-position: left center; /* orientation=lt */
-	background-position: right center; /* orientation=rt */
+/*.UIGroupsNavigation .DefaultPageIcon {
+	padding: 4px 0px 4px 20px;
+	padding: 4px 20px 4px 0px;
+	background-position: left center;
+	background-position: right center;
 	width: auto;
+}                    */
+.UIGroupsNavigation .NodeIcon {
+    padding: 4px 0px 4px 20px; /* orientation=lt */
+    padding: 4px 20px 4px 0px; /* orientation=rt */
+    background-position: left center; /* orientation=lt */
+    background-position: right center; /* orientation=rt */
+    width: auto;
 }
 
 .UIGroupsNavigation .GroupName{
