--- a/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
+++ b/extension/resources/src/main/webapp/skin/platformSkin/UIToolbarContainer/Stylesheet.css
@@ -81,6 +81,13 @@ z-index: 2;
 background: #ffffff;
 }
 
+.UIToolbarContainer .UIHorizontalTabs .UITab:hover > ul > li > a {
+    color: #20263f;
+    position: relative;
+    z-index: 2;
+    background: #ffffff;
+}
+
 .UIToolbarContainer .UIHorizontalTabs .UITab:hover a.TBIcon {
 border: 1px solid #dbdbdb;
 border-bottom: none;
