--- a/extension/portlets/homepagePortlets/src/main/webapp/style/online.css
+++ b/extension/portlets/homepagePortlets/src/main/webapp/style/online.css
@@ -1,34 +1,28 @@
-#OnlineGadget .uigadgetthemes .GadCont {
-  padding: 0px;
 
+.onlineHeader {
+    font-weight: bold;
+    margin-bottom: 12px;
+    padding-top: 5px;
 }
 
-
-#OnlineGadget .title {
-    padding-left: 30px;
-    text-transform:uppercase;
-    font-weight: bold;    
-}
-
-#OnlineGadget ul {
- 
- padding-left:30px;
- padding-right: 30px;
+#OnlinePortlet ul {
+ list-style-type: none;
+ padding-left:0px;
+ padding-right:0px;
   
 }
 
-#OnlineGadget .gallery li {
+#OnlinePortlet .gallery li {
         display: inline;
         list-style: none;
         width: 26px;
         height: 40px;
-        float: left;
         margin: 0 5px 5px 0;
         text-align: center;
   }
 
-#OnlineGadget .gallery li img {
- 
+#OnlinePortlet .gallery li img {
+ margin-bottom: 5px;
  height: 40px;
  width: 26px;
 }
@@ -56,4 +50,10 @@
 
 #tipName {
  font-weight: bold; 
+}
+
+#OnlinePortlet {
+    border: 1px dashed #E2DDC7;
+    margin-right: 15px;
+    padding: 10px 15px 5px;
 }
