--- a/extension/portlets/homepagePortlets/src/main/webapp/style/online.css
+++ b/extension/portlets/homepagePortlets/src/main/webapp/style/online.css
@@ -1,8 +1,13 @@
 
 .onlineHeader {
+    background: none repeat scroll 0 0 #F8F8F8;
+    border: 1px solid #E1E1E1;
+    border-radius: 3px 3px 3px 3px;
+    color: #2F3334;
+    line-height: 25px;
+    padding: 0 5px 0 8px;
     font-weight: bold;
-    margin-bottom: 12px;
-    padding-top: 5px;
+    margin-bottom: 5px;
 }
 
 #OnlinePortlet ul {
@@ -53,7 +58,7 @@
 }
 
 #OnlinePortlet {
-    border: 1px dashed #E2DDC7;
-    margin-right: 15px;
-    padding: 10px 15px 5px;
+
+    margin-right: 3px;
+
 }
